--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <img class="card" src="jack_clover.png" >
     <img class="card" src="jack_hearts.png" >
     <img class="card" src="queen_hearts.png" >
+    <img class="card" src="king_spades.png" >
+    <img class="card" src="ace_diamonds.png" >
  
   <div class="container">
     <video  style="transform: rotateY(180deg);display: none;" class="input_video"></video>
